manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanna
  namespace: kanna
spec:
  replicas: 3
  revisionHistoryLimit: 4
  selector:
    matchLabels:
      app: kanna
  template:
    metadata:
      labels:
        app: kanna
    spec:
      containers:
      - name: kanna
        image: art.montkim.com/public/kanna:eab086
        ports:
        - containerPort: 3000
      nodeSelector:
        kubernetes.io/hostname: worker02
