manifest/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanna-service
  namespace: kanna
spec:
  selector:
    app: kanna
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
